--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,3 +13,9 @@ linters:
         original-url: github.com/leoscrowi/loglint
         settings:
           one: Foo
+
+issues:
+  max-per-linter: 0
+  max-per-file-from-linter: 0
+  max-same-issues: 0
+  uniq-by-line: false
