--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-24.04 [Beta]
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         go-version: ['1.26.0']
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: setup go
-        uses: actions/setup-go@v6
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
 
@@ -28,15 +28,12 @@ jobs:
         run: |
             curl -sSfL https://golangci-lint.run/install.sh | sh -s -- -b $(go env GOPATH)/bin v${{ matrix.golangci-lint-version }}
             golangci-lint --version
-
       - name: Build loglint plugin
         run: |
             golangci-lint custom -v
-
       - name: Run linter
         run: |
           ./bin/loglint run -v ./
-
       - name: Testing
         run: |
           go test ./...
